# mcp-erp

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md  backends.md
src/: business_central.rs  lib.rs  main.rs  netsuite.rs  odoo.rs  sap.rs  server.rs  types.rs  zoho.rs
