[package]
name = "mcp-erp"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Enterprise ERP MCP Server — unified access to SAP S/4HANA, NetSuite, Odoo, Zoho Books, and Microsoft Dynamics 365 Business Central with lifecycle-based document management"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-erp"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "erp", "sap", "netsuite", "odoo"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[features]
default = ["zoho", "odoo"]
zoho = []
odoo = []
business-central = []
netsuite = []
sap = []
all-backends = ["zoho", "odoo", "business-central", "netsuite", "sap"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[workspace]
